# plumage

./: .gitignore  Cargo.toml  README.md  generate.sh  params.example
misc/: example.params
misc/readme/: Makefile  README.m4  package-readme.md
src/: color.rs  coords.rs  error.rs  generate.rs  lib.rs  main.rs  params.rs  pixmap.rs
src/cli/: error.rs  main.rs
src/params/: seed.rs
