[package]
name = "plumage"
version = "0.1.2"
edition = "2021"
description = "Algorithmic colorful picture generator"
documentation = "https://github.com/taylordotfish/plumage"
readme = "misc/readme/package-readme.md"
repository = "https://github.com/taylordotfish/plumage"
license = "AGPL-3.0-or-later"
exclude = ["*.png"]

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
ron = "0.8"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
default = ["std"]
std = []
cli-panic = []

[[bin]]
name = "plumage"
path = "src/cli/main.rs"
required-features = ["std"]
